# lab08

./: .dockerignore  .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  README.md  REPORT.md
.github/workflows/: ci.yml
banking/: CMakeLists.txt
cmake/Hunter/: config.cmake
demo/: main.cpp
tests/: test_account.cpp  test_transaction.cpp
